2007-01-23  Simon Martin  <simartin@users.sourceforge.net>

PR c++/27492
	* decl.c (duplicate_decls): Don't reset DECL_INVALID_OVERRIDER_P for
	function decls.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@121089 138bc75d-0d04-0410-961f-82ee72b054a4